Refactor the proxy feedKey locking, improve AttributeMapUtil#readKeys()